--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -57,7 +57,8 @@
         <h1>Jestem tytułem strony mogę być raz w dokumencie/pliku HTML</h1>
     </div>
     
-    <div>
+    <div id="addh1">
+
         <h2>Jestem tytułem rozdziału</h2>
         <h3>Jestem pod rozdziałem rozdziału 2</h3>
     </div>
@@ -87,8 +88,17 @@
     <h2>Sebastian Chechelski <span style="color: red;">developer</span> <b>Phytona</b> </h2>
     <h2>Paweł Kania <p style="color: red;">developer</p> <strong>Phytona</strong> </h2> 
     <div class="rodzic">
-        <div class="dziecko"></div>
+        <div class=" "></div>
     </div>
+
+    <div>
+        <section>   
+            <p></p>
+            <p></p>
+        </section>
+    </div>
+<script src="main.js"></script>
+
 
 </body>
 </html>
